Fixed form labels so they close around the actual label. Styling. Changed some element classes to ids. These things are outside the scope of this branch, so let's merge.

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,41 @@
 .App {
   /*text-align: center;*/
+  background-color: #07889B;
+}
+
+label {
+  float: left;
+  text-align: right;
+  margin-right: 15px;
+  width: 125px;
+}
+
+#input-form {
+  background-color: #07889B;
+  color: white;
+}
+
+#input-form div {
+  margin-bottom: 5px;
+}
+
+#input-form input, #input-form textarea {
+  width: 275px;
+}
+
+#input-form input[type="submit"] {
+  width: 150px;
+}
+
+.Stalk {
+  background-color: #07889B;
+  color: white; 
+}
+
+.StalkList {
+  background-color: #07889B;
+  color: white;
+  list-style-type: none;
 }
 
 .App-logo {
